# camkes-vm-examples

apps/Arm/vm_multi/: CMakeLists.txt  vm_multi.camkes
apps/Arm/vm_multi/network/: aegis  aegis-conf.yml  config.yml  connect-vlans  generate-client-vlan  ipsec.secrets
apps/Arm/vm_multi/network/aegis/: aegis  main.go
apps/Arm/vm_multi/network/aegis-2.0/: Makefile  go.mod
apps/Arm/vm_multi/network/aegis-2.0/cmd/aegis/: main.go
apps/Arm/vm_multi/network/aegis-2.0/pkg/aegis/: aegis.go
apps/Arm/vm_multi/network/aegis-2.0/pkg/config/: config.go
apps/Arm/vm_multi/network/aegis/functionality/: functionality.go
apps/Arm/vm_multi/network/aegis/helpers/: helpers.go
apps/Arm/vm_multi/network/aegis/takedown/: takedown.go
apps/Arm/vm_multi/network/aegis/types/: types.go
apps/Arm/vm_multi/network/aegis/wireguard/: wireguard.go
apps/Arm/vm_multi/network/ip_allocation/: ip-allocator  main.go
apps/Arm/vm_multi/network/orchestration/: main.go  setup
apps/Arm/vm_multi/network/orchestration/functionality/: functionality.go
apps/Arm/vm_multi/network/orchestration/nodes/: nodes.go
apps/Arm/vm_multi/network/orchestration/types/: types.go
apps/Arm/vm_multi/network/setup-scripts/: build-router.sh  connect-vlans  generate-client-vlan  iptables-raw-forwarding  remote-etc-hosts  set-default-route  wireguard-interface.sh
apps/Arm/vm_multi/network/vnfs/: add-ip-forward  add-route  arp-forwarding  clean  silent
apps/Arm/vm_multi/notes/: vlan-testing.sh
apps/Arm/vm_multi/overlay_files/: S75amalthea  vm0_bridge_setup.sh  vm0_bridge_setup_gre.sh  vm_client_net_setup.sh
apps/Arm/vm_multi/qemu-arm-virt/: devices.camkes
apps/Arm/vm_multi/scripts/: nat-firewalld.sh
